refactor: strengthen assessment domain rules and tests